# VarianC-Compiler

./: .gitignore  CMakeLists.txt  README.md  main.cc  scan.cc  token.cc
TestSample/: test.c  test1.c  test2.c
include/: analysis.h  global.h  scan.h  symbol_table.h  syntax_treenode.h
parser/: analysis.cc  symbol_table.cc  syntax_treenode.cc
scanner/: scan.cc  token.cc
